12th July 2013

- added fix for issue #26 ( server must be restarted to reflect the changes on epname.ini ).
  With this fix, the newly added EP is get immediately available for cli usage. The GUI has to
  be refreshed to get the new EP. No need to restart the server.
- code rework for installer to install separately the dependencies. Now, there are 3 options for installer.
  Install dependencies ( requires root access ), install server, install client. Issue #12 is covered
  with this fix.
- added a GUI fix to allow export/import of a solely suite
- fix for issue #23 ( Save button is shown instead of Open button in pre/post execution open file dialog )
- fix for issue #29 ( Clear log button should reconfirm from the user whether the logs should be erased ).
  A confirmation window is presented.
- added Build Date filed for applet in About window.  
- updated the user guide document
- INFO: the applet, server and clients were updated, so all of them have to be re-installad

11th July 2013

- added support to load/save suites from/in suite vault; a directory can contain predefined suite files that
  can be loaded into a project file in GUI; the user has to define a path to the suites vault in
  Configuration->Paths->"Predefined Suites Path"; that is the place where the predefined suites are search;
  the user can exports a project file into the vault suites directory by doing project->File->"Export As Suite"
- removed the deprecated file start_ep.py and updated installer
- fixed an issue for Reporting page if the user is a NIS user
- removed ENABLED flag from epname.ini file because is DEPRECATED

10th July 2013

- fixed a backend code issue for teardown files in sub-suites
- added mechanism for automatic start of execution engines ( EPs ); the user can specify in GUI the EPs associated with a test 
  bed and they are started automatically on client side even if they are enabled or not in eoname.ini